--- a/exer.css
+++ b/exer.css
@@ -30,14 +30,14 @@ body{
     width: 50%;
     height: 80px;
 }
-.header .left .cadr {
+.header .left .card {
     border: 2px solid black;
     width: 22%;
     height: 80px;
     margin-left: 17px;
     float: left;
 }
-.header .right .cadr {
+.header .right .card {
     border: 2px solid black;
     width: 98%;
     height: 80px;
@@ -60,27 +60,27 @@ body{
     width: 50%;
     height: 250px;
 }
-.posts .right .cadr {
+.posts .right .card {
     border: 2px solid black;
     width: 98%;
     height: 100%;
     float: left;
 }
-.posts .left .cadr {
+.posts .left .card {
     border: 2px solid black;
     width: 95%;
     height: 19%;
     margin-left: 15px;
     float: left;
 }
-.posts .left .cadr2 {
+.posts .left .card2 {
     border: 2px solid black;
     width: 95%;
     margin: 20px 0 0 15px;
     height: 46%;
     float: left;
 }
-.posts .left .cadr3 {
+.posts .left .card3 {
     border: 2px solid black;
     width: 95%;
     height: 19%;
