--- a/exer.css
+++ b/exer.css
@@ -8,10 +8,9 @@ body{
     padding: 20px 20px;
 }
 .screen {
-    
     background-color: white;
     width: 100%;
-    height: 700px;
+    height: 2500px;
 }
 .screen .header {
     background-color: #f1f1f1;
@@ -50,14 +49,14 @@ body{
 }
 .screen .posts .left {
     background-color: rgb(178, 232, 232);
-    width: 50%;
+    width: 40%;
     float: left;
     height: 250px;
 }
 .screen .posts .right {
     background-color: teal;
     float: right;
-    width: 50%;
+    width: 60%;
     height: 250px;
 }
 .posts .right .card {
@@ -65,6 +64,7 @@ body{
     width: 98%;
     height: 100%;
     float: left;
+    margin-left: 3px;
 }
 .posts .left .card {
     border: 2px solid black;
@@ -87,8 +87,40 @@ body{
     margin: 20px 0 0 15px;
     float: left;
 }
-.posts2 {
-    background-color: #f1f1f1;
+.screen .posts2 {
+    background-color: #0011ff;
     width: 100%;
-    height: 1000px;
+    height: 5400px;
+}
+.screen .posts2 .left {
+    background-color: #ff5d96;
+    width: 60%;
+    float: left;
+    height: auto;
+}
+.screen .posts2 .right {
+    background-color: #878787;
+    float: right;
+    width: 40%;
+    height: auto;
+}
+.posts2 .left .card {
+    border: 2px solid black;
+    width: 96%;
+    margin: 0 0 20px 15px ;
+    height: 250px;
+    float: left;
+}
+.posts2 .right .card {
+    border: 2px solid black;
+    width: 60%;
+    height: 400px;
+    float: left;
+}
+.posts2 .right .card2 {
+    border: 2px solid black;
+    width: 35%;
+    height: 400px;
+    margin: 0 0 20px 15px ;
+    float: left;
 }
