--- a/exer.css
+++ b/exer.css
@@ -10,54 +10,56 @@ body{
 .screen {
     background-color: white;
     width: 100%;
-    height: 2500px;
+    height: auto;
 }
 .screen .header {
     background-color: #f1f1f1;
     width: 100%;
     height: 100px;
+    padding: 0 0 20px 0;
 }
 .screen .header .left {
     background-color: palevioletred;
     float: left;
     width: 50%;
-    height: 80px;
+    height: 100%;
 }
 .screen .header .right {
     background-color: skyblue;
     float: right;
     width: 50%;
-    height: 80px;
+    height: 100%;
 }
 .header .left .card {
     border: 2px solid black;
     width: 22%;
-    height: 80px;
+    height: 100%;
     margin-left: 17px;
     float: left;
 }
 .header .right .card {
     border: 2px solid black;
     width: 98%;
-    height: 80px;
+    height: 100%;
     float: left;
 }
 .screen .posts {
     background-color:#ffc3c3;
     width: 100%;
     height: 270px;
+    padding: 0 0 20px 0;
 }
 .screen .posts .left {
     background-color: rgb(178, 232, 232);
     width: 40%;
     float: left;
-    height: 250px;
+    height: 100%;
 }
 .screen .posts .right {
     background-color: teal;
     float: right;
     width: 60%;
-    height: 250px;
+    height: 100%;
 }
 .posts .right .card {
     border: 2px solid black;
@@ -96,13 +98,13 @@ body{
     background-color: #ff5d96;
     width: 60%;
     float: left;
-    height: auto;
+    height: 100%;
 }
 .screen .posts2 .right {
     background-color: #878787;
     float: right;
     width: 40%;
-    height: auto;
+    height: 100%;
 }
 .posts2 .left .card {
     border: 2px solid black;
