--- a/exer.css
+++ b/exer.css
@@ -187,7 +187,6 @@
     height: 250px;
     float: left;
 }
-
 .posts2 .left .card .games{
     height: auto;
     width: 29%;
@@ -201,7 +200,17 @@
 .posts2 .left .card .games img:hover{
     border: 1px solid rgb(193, 193, 193) ;
 }
-
+.posts2 .left .card2 {
+    border: 2px solid black;
+    width: 96%;
+    margin: 0 0 20px 15px ;
+    height: 250px;
+}
+.posts2 .left .card2 .ad img{
+    width: 50%;
+    height: 100%;
+    margin-left: 35px;
+}
 .posts2 .right .card {
     width: 60%;
     height: 400px;
@@ -225,7 +234,6 @@
     height: 82%;
 }
 .posts2 .right .card2 {
-    border: 2px solid black;
     width: 35%;
     height: 400px;
     margin: 0 0 20px 15px ;
@@ -258,4 +266,19 @@
 .posts2 .right .card2 button:hover{
     background-color:rgb(0,0,0) ;
     color: rgb(193, 193, 193);
+}
+.posts2 .right .card2 .comments button{
+    background-color: gray;
+    font-weight: bold;
+    margin: 10px 0 10px 0;
+    width: 100%;
+    height: 60px;
+    border: 1px solid black;
+}
+.posts2 .right .card2 .recentcm{
+    padding: 10px;
+    width: 100%;
+    height: 62%;
+    background-color: gainsboro;
+    color: gray;
 }
