--- a/exer.css
+++ b/exer.css
@@ -7,8 +7,7 @@
 .screen {
     width: 100%;
     height: auto;
-    background: rgb(124,124,124);
-    background: linear-gradient(90deg, rgba(124,124,124,1) 0%, rgba(73,73,73,1) 25%, rgba(124,124,124,1) 51%, rgba(73,73,73,1) 79%, rgba(124,124,124,1) 100%);
+   background-color: rgb(193, 193, 193);
 }
 
 /*header*/
@@ -79,7 +78,7 @@
     height: 100%;
 }
 .header .right input[type=text] {
-    background-color: rgb(193, 193, 193);
+    background-color: rgb(255, 255, 255);
     color: rgb(1, 1, 90) ;
     float: right;
     padding: 6px;
@@ -200,16 +199,60 @@
 .posts2 .left .card .games img:hover{
     border: 1px solid rgb(193, 193, 193) ;
 }
-.posts2 .left .card2 {
+.posts2 .left .card {
     border: 2px solid black;
     width: 96%;
     margin: 0 0 20px 15px ;
     height: 250px;
 }
-.posts2 .left .card2 .ad img{
+.posts2 .left .card .ad img{
     width: 50%;
     height: 100%;
     margin-left: 35px;
+    float: left;
+}
+.posts2 .left .card .img2 img{
+    width: 40%;
+    height: 100%;
+    float: left;
+    margin-left: 20px;
+} 
+.posts2 .left .card a{
+    font-weight: bold;
+    font-size: 29px;
+    margin-left: 130px;
+    color: rgb(1, 1, 90);
+}
+.posts2 .left .card a:hover{
+    color: white;
+}
+.posts2 .left .card .up{
+    width: 96%;
+    height: 20%;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(1, 1, 90) 99%);
+    color: rgb(193, 193, 193);
+    font-size: 19px;
+    margin: 0 0 10px 35px;
+    padding: 10px 20px;
+}
+.posts2 .left .card .bottom{
+    width: 96%;
+    height: 190px;
+    background-color: rgb(0, 0, 79);
+    color: white;
+    font-size: 20px;
+    text-align: left;
+    margin-left: 35px;
+}
+.posts2 .left .card .bottom .img3 img{
+    width: 20%;
+    height: 100%;
+    float: left;
+    margin: 15px 0 0 30px ;
+}
+.posts2 .left .card .bottom .img3 img:hover{
+    border: 1px solid rgb(193, 193, 193) ;
 }
 .posts2 .right .card {
     width: 60%;
@@ -217,10 +260,11 @@
     float: left;
 }
 .posts2 .right .card .text{
+    color: rgb(193, 193, 193);
     border: 0 solid black;
     border-radius: 4px;
     background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,255,255,1) 99%);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(1, 1, 90) 99%);
     width: 100%;
     height: 13%;
     float: left;
